	* app-chromium: Changed file_cookies to fill is_permanent, is_httponly, etc.
	* app-chromium: Changed file_login_data to use database::new_statement (template, schema_version)
	* app-chromium: Changed file_history to use database::new_statement (template, schema_version)
	* app-chromium: Changed file_web_data to use database::new_statement (template, schema_version)
	* app-utorrent: Improved the check for settings.dat files
	* evidence-viewer: Added new evidence type "Voicemail"
	* evidence-viewer: Added new evidence type "Remote Party IP Address"
	* evidence-viewer: Changed evidence type "P2P Remote File" to "Remote Party Shared File"
	* evidence-viewer: Changed evidence type "Instant Message" to "SMS/MMS Message"
	* iped-frontend: Added new processing option to force full garbage collection
	* iped-frontend: Added new processing option to set XMX and XMS memory size
	* iped-frontend: Added new processing button to resume processing
	* skype-agent: Removed extension
	* skype-agent-sqlite: Removed extension
	* date-code: Using new datetime::timedelta constructor
	* vfs-imagefile-dossier: Using new datetime::timedelta constructor
	* vfs-imagefile-vhd: Using new datetime::timedelta constructor
	* libmobius_core: Added new method database::new_statement (template, schema_version)
	* libmobius_core: Added new template method pod::data::to_list<T>
	* libmobius_core: Added new method bytearray::to_guid
	* libmobius_core: Added new datetime::operator- (time, time)
	* libmobius_core: Added new datetime::operator- (datetime, datetime)
	* libmobius_core: Added new datetime::timedelta::operator+= (timedelta)
	* libmobius_core: Added new datetime::timedelta::operator-= (timedelta)
	* libmobius_core: Added new datetime::timedelta::to_seconds method
	* libmobius_core: Added new datetime::timedelta::to_nanoseconds method
	* libmobius_core: Added new datetime::timedelta::to_days method
	* libmobius_core: Added new datetime::timedelta::from_seconds method