@@ -7,6 +7,8 @@ Mobius Forensic Toolkit 2.21
 	* app-chromium: Changed file_login_data to use database::new_statement (template, schema_version)
 	* app-chromium: Changed file_history to use database::new_statement (template, schema_version)
 	* app-chromium: Changed file_web_data to use database::new_statement (template, schema_version)
+	* app-chromium: Fixed file_bookmarks.cpp bug: "cannot convert data to map"
+	* app-chromium: Improved decryption mechanism for post_processor_impl class
 	* app-utorrent: Improved the check for settings.dat files
 	* evidence-viewer: Added new evidence type "Voicemail"
 	* evidence-viewer: Added new evidence type "Remote Party IP Address"
